--- a/templates/article/reactions/edit.html
+++ b/templates/article/reactions/edit.html
@@ -9,7 +9,7 @@
     <h2>Editer le commentaire de l'article : {{article.title}}</h2>
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     <h3 class="subtitle">{{ article.description }}</h3>
 {% endblock %}
 
