--- a/templates/base.html
+++ b/templates/base.html
@@ -454,7 +454,7 @@
                             <h2>{% block headline %}{% endblock %}</h2>
 
                             {% captureas headlinesub %}{% spaceless %}
-                                {% block headline-sub %}{% endblock %}
+                                {% block headline_sub %}{% endblock %}
                             {% endspaceless %}{% endcaptureas %}
 
                             {% if headlinesub %}
