--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -23,7 +23,7 @@
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions sur ce sujet">
         <h3>Actions <span class="wide">sur ce sujet</span></h3>
         <ul class="sidebar-standalone">
-        	<div class="headline-actions">{% block headline-actions %}{% endblock %}</div>
+        	<div class="sidebar_actions">{% block sidebar_actions %}{% endblock %}</div>
         </ul>
     </div>
 
