--- a/templates/forum/index.html
+++ b/templates/forum/index.html
@@ -36,7 +36,7 @@
 {% endblock %}
 
 
-{% block headline-actions %}
+{% block sidebar_actions %}
     <div class="button-group">
         {% include "forum/feeds.part.html" %}
     </div>
