--- a/templates/gallery/base.html
+++ b/templates/gallery/base.html
@@ -15,7 +15,7 @@
 		<ul>
 			<li><a href="{% url "zds.gallery.views.gallery_list" %}">Liste des galeries</a></li>
 			<li><a href="{% url "zds.gallery.views.new_gallery" %}">Ajouter une galerie</a></li>
-			{% block headline-actions %}{% endblock %}
+			{% block sidebar_actions %}{% endblock %}
 		</ul>
 	</div>
 </aside>
