--- a/templates/gallery/new_image.html
+++ b/templates/gallery/new_image.html
@@ -14,7 +14,7 @@
     <li class="current"><a href="#">Nouvelle image</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
 			<li><a href="{% url "zds.gallery.views.new_image" gallery.pk %}">Ajouter une image</a></li>
 {% endblock %}
 
