--- a/templates/member/base.html
+++ b/templates/member/base.html
@@ -1,22 +1,21 @@
 {% extends "base.html" %}
 
+
+
 {% block title_base %}
     &#183; Membres
 {% endblock %}
+
+
 
 {% block breadcrumb_base %}
     <li><a href="{% url "zds.member.views.index" %}">Membres</a></li>
 {% endblock %}
 
-{% block sidebar %}
-<aside class="sidebar mobile-menu-hide">
-	{% block headline-actions %}{% endblock %}
-</aside>
-{% endblock %}
 
-{% block content_out %}
-    <article>
-        <header>{% block headline %}{% endblock %}</header>
-        <section class="article-content content-wrapper">{% block content %}{% endblock %}</section>
-    </article>
+
+{% block sidebar %}
+    <aside class="sidebar mobile-menu-hide">
+        {% block sidebar_actions %}{% endblock %}
+    </aside>
 {% endblock %}
