--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -40,7 +40,7 @@
     <li class="current"><a href="#">{{ usr.username }}</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Admin">
         <h3>Actions</h3>
         <ul>
