--- a/templates/mp/base.html
+++ b/templates/mp/base.html
@@ -21,6 +21,6 @@
 
 {% block sidebar %}
 <aside class="sidebar mobile-menu-hide">
-	{% block headline-actions %}{% endblock %}
+	{% block sidebar_actions %}{% endblock %}
 </aside>
 {% endblock %}
