--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -24,7 +24,7 @@
     <li class="current"><a href="javascript:;">Index</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
 
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
         <h3>Actions</h3>
