--- a/templates/pages/help_markdown.html
+++ b/templates/pages/help_markdown.html
@@ -8,7 +8,7 @@
     Markdown
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     Petit aide-mémoire pour mieux rédiger
 {% endblock %}
 
