--- a/templates/tutorial/diff_tutorial.html
+++ b/templates/tutorial/diff_tutorial.html
@@ -39,7 +39,7 @@
     <li class="current"><a href="#">Historique</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
 {% endblock %}
 
 {% block content %}
