--- a/templates/tutorial/history_validation.html
+++ b/templates/tutorial/history_validation.html
@@ -17,7 +17,7 @@ Historique de validation du tutoriel
     <li class="current"><a href="#">Historique</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
 {% endblock %}
 
 {% block content %}
