--- a/templates/tutorial/index_member.html
+++ b/templates/tutorial/index_member.html
@@ -1,11 +1,11 @@
 {% extends "tutorial/index.html" %}
 {% load humanize %}
 
-{% block headline-sub-actions %}
+{% block headline_sub-actions %}
     <li><a href="{% url "zds.tutorial.views.import_tuto" %}">Importer</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
         <h3><span class="wide">Filtres</span></h3>
         <ul>
