--- a/templates/tutorial/new_extract.html
+++ b/templates/tutorial/new_extract.html
@@ -11,7 +11,7 @@
     </h1>
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     {% if chapter.part %}
         {{ chapter.title }}
     {% else %}
