--- a/templates/tutorial/validation.html
+++ b/templates/tutorial/validation.html
@@ -18,7 +18,7 @@
     <li class="current">Tutoriels en attente de validation</li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
     <h3>Navigation</h3>
     <ul class="sidebar-standalone">
         <li>
