--- a/templates/tutorial/view_chapter_online.html
+++ b/templates/tutorial/view_chapter_online.html
@@ -64,7 +64,7 @@
 
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
 	{% if perms.tutorial.change_tutorial%}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administrations">
         <h3>Admin<span class="wide">istration</span></h3>
