--- a/templates/article/admin/index.html
+++ b/templates/article/admin/index.html
@@ -31,20 +31,7 @@
     {% if articles %}
         <div class="article-items">
             {% for article in articles %}
-                <article>
-                    <a href="{{ article.get_absolute_url }}">
-                        {% if article.image %}
-                            <img src="{{ article.image.thumb.url }}" alt="" class="article-img avatar">
-                        {% endif %}
-
-                        <div class="article-infos">
-                            <h3>{{ article.title }}</h3>
-                            <p class="article-metadata">
-                                Crée {{ article.create_at|naturaltime }}
-                            </p>
-                        </div>
-                    </a>
-                </article>
+                {% include "articles/includes/article_item.part.html" with link=article.get_absolute_url %}
             {% endfor %}
         </div>
     {% else %}
