--- a/templates/article/admin/view.html
+++ b/templates/article/admin/view.html
@@ -3,89 +3,104 @@
 {% load humanize %}
 {% load profile %}
 
+
+
 {% block title %}
     {{ article.title }}
 {% endblock %}
 
+
+
 {% block headline %}
-    <a href="{{ article.get_absolute_url }}">{{ article.title }}</a><br />
-    <small>{{ article.description }}</small>
+    <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
+    <p>
+        {{ article.description }}
+    </p>
 {% endblock %}
+
+
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">{{ article.title }}</a></li>
+    <li class="current">{{ article.title }}</li>
 {% endblock %}
 
-{% block headline-actions %}
+
+
+{% block sidebar_actions %}
     {% if user.is_authenticated %}
-    <form action="{% url "zds.article.views.modify" %}" method="post">
-        {% if tags %}
-        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Tags">
-            <h3>Tags</h3>
-            <ul>
-            {% for category in tags.all %}
-                <li><a href="{% url "zds.article.views.index" %}?tag={{category.title}}">{{ category.title }}</a></li>
-            {% endfor %}
-            </ul>
-        </div>
-        {% endif %}
+        <form action="{% url "zds.article.views.modify" %}" method="post">
+            {% if tags %}
+            <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Tags">
+                <h3>Tags</h3>
+                <ul>
+                {% for category in tags.all %}
+                    <li><a href="{% url "zds.article.views.index" %}?tag={{category.title}}">{{ category.title }}</a></li>
+                {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
 
-        {% if authors %}
-        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Contributeurs">
-            <h3>Contributeurs</h3>
-            <ul>
-            {% for author in authors.all %}
-                {% with profile=author|profile %}
-                <li><a href="{{ author.get_absolute_url }}">{{ author.username }}</a></li>
-                {% endwith %}
-            {% endfor %}
-            </ul>
-        </div>
-        {% endif %}
+            {% if authors %}
+            <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Contributeurs">
+                <h3>Contributeurs</h3>
+                <ul>
+                {% for author in authors.all %}
+                    {% with profile=author|profile %}
+                        <li>
+                            <a href="{{ author.get_absolute_url }}">{{ author.username }}</a>
+                        </li>
+                    {% endwith %}
+                {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
 
-        {% if user in authors.all or perms.article.change_article %}
-        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Opérations">
-            <h3>Opérations</h3>
-            <ul>
-                {% if article.sha_draft = version %}
-                <li><a href="{% url "zds.article.views.edit" %}?article={{ article.pk }}">Éditer</a></li>
-                {% endif %}
-                {% if article.sha_validation = None %}
-                <li>
-                    <button type="submit" name="pending">Demander la validation</button>
-                    <textarea name="comment" rows="3" placeholder="Vos commentaires de validation"> </textarea>
-                </li>
-                {% endif %}
-                {% if article.sha_public = None %}
-                <li><button type="submit" name="delete">Confirmer la suppression</button></li>
-                {% endif %}
-                <li><a href="{% url "zds.article.views.history" article.pk article.slug %}">Historique des versions</a></li>
-        </div>
-        {% endif %}
+            {% if user in authors.all or perms.article.change_article %}
+            <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Opérations">
+                <h3>Opérations</h3>
+                <ul>
+                    {% if article.sha_draft = version %}
+                        <li><a href="{% url "zds.article.views.edit" %}?article={{ article.pk }}">Éditer</a></li>
+                    {% endif %}
 
-        {% if perms.article.change_article %}
-        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administration">
-            <h3>Admin<span class="wide">istration</span></h3>
-            <ul>
-                {% if not article.sha_validation = None %}
-                <li>
-                    <button type="submit" name="valid-article">Confirmer la publication</button>
-                    <textarea name="comment-v" rows="3" placeholder="Vos commentaires de publication"> </textarea>
-                </li>
-                <li>
-                    <button type="submit" name="reject-article">Confirmer le rejet</button>
-                    <textarea name="comment-r" rows="3" placeholder="Vos commentaires de rejet"> </textarea>
-                </li>
-                {% endif %}
-                <li><a href="{% url "zds.article.views.history_validation" article.pk %}">Historique validation</a></li>
-            </ul>
-        </div>
-        {% endif %}
+                    {% if article.sha_validation = None %}
+                        <li>
+                            <button type="submit" name="pending">Demander la validation</button>
+                            <textarea name="comment" rows="3" placeholder="Vos commentaires de validation"></textarea>
+                        </li>
+                    {% endif %}
 
-        <input type="hidden" name="article" value="{{ article.pk }}" />
-        <input type="hidden" name="version" value="{{ version }}" />
-        {% csrf_token %}
-    </form>
+                    {% if article.sha_public = None %}
+                        <li><button type="submit" name="delete">Confirmer la suppression</button></li>
+                    {% endif %}
+                    
+                    <li><a href="{% url "zds.article.views.history" article.pk article.slug %}">Historique des versions</a></li>
+            </div>
+            {% endif %}
+
+            {% if perms.article.change_article %}
+            <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administration">
+                <h3>Admin<span class="wide">istration</span></h3>
+                <ul>
+                    {% if not article.sha_validation = None %}
+                    <li>
+                        <button type="submit" name="valid-article">Confirmer la publication</button>
+                        <textarea name="comment-v" rows="3" placeholder="Vos commentaires de publication"> </textarea>
+                    </li>
+                    <li>
+                        <button type="submit" name="reject-article">Confirmer le rejet</button>
+                        <textarea name="comment-r" rows="3" placeholder="Vos commentaires de rejet"> </textarea>
+                    </li>
+                    {% endif %}
+                    <li><a href="{% url "zds.article.views.history_validation" article.pk %}">Historique validation</a></li>
+                </ul>
+            </div>
+            {% endif %}
+
+            <input type="hidden" name="article" value="{{ article.pk }}" />
+            <input type="hidden" name="version" value="{{ version }}" />
+            {% csrf_token %}
+        </form>
     {% endif %}
 
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Télécharger">
@@ -94,26 +109,15 @@
             <li><a href="{% url "zds.article.views.download" %}?article={{ article.pk }}">Archive</a></li>
         </ul>
     </div>
-    
 {% endblock %}
 
 {% block content %}
-
-{% if article.is_visible %}
-    {% include "article/view_pager.part.html" %}
-{% endif %}
-
-<div class="row">
-    <div class="large-12 columns">
-        <div class="large-1 columns hide-for-small">
-            {% if article.thumbnail %}
+    <div class="large-1 columns hide-for-small">
+        {% if article.thumbnail %}
             <img src="{{article.thumbnail.url }}"/>
-            {% endif %}
-        </div>
-        <div>
-            {{ article.txt|emarkdown }}
-        </div>
+        {% endif %}
     </div>
-</div>
-
+    <div>
+        {{ article.txt|emarkdown }}
+    </div>
 {% endblock %}
