--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -81,20 +81,7 @@
     {% if articles %}
         <div class="article-items">
             {% for article in articles %}
-                <article>
-                    <a href="{{ article.get_absolute_url_online }}">
-                        {% if article.image %}
-                            <img src="{{ article.image.thumb.url }}" alt="" class="article-img avatar">
-                        {% endif %}
-
-                        <div class="article-infos">
-                            <h3>{{ article.title }}</h3>
-                            <p class="article-metadata">
-                                Créé {{ article.pubdate|naturaltime }}
-                            </p>
-                        </div>
-                    </a>
-                </article>
+                {% include "articles/includes/article_item.part.html" with link=article.get_absolute_url_online %}
             {% endfor %}
         </div>
     {% else %}
