--- a/templates/forum/details.html
+++ b/templates/forum/details.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 
-{% block headline-sub %}
+{% block headline_sub %}
     {{ forum.subtitle }}
 {% endblock %}
 
@@ -23,7 +23,7 @@
 {% endblock %}
 
 
-{% block headline-actions %}
+{% block sidebar_actions %}
     <li><a href="{% url "zds.forum.views.new" %}?forum={{ forum.pk }}" class="ico-after">Nouveau Sujet</a></li>
 {% endblock %}
 
