--- a/templates/forum/topic.html
+++ b/templates/forum/topic.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 
-{% block headline-sub %}
+{% block headline_sub %}
     <h3 class="subtitle">{{ topic.subtitle }}</h3>
 {% endblock %}
 
@@ -27,7 +27,7 @@
 {% endblock %}
 
 
-{% block headline-actions %}
+{% block sidebar_actions %}
     <li>
         <a href="{% url "zds.forum.views.new" %}?forum={{ topic.forum.pk }}" class="ico-after">
             Nouveau Sujet
