--- a/templates/gallery/gallery_details.html
+++ b/templates/gallery/gallery_details.html
@@ -10,7 +10,7 @@
     <h2>{{ gallery.title }}</h2>
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     <h3 class="subtitle">{{ gallery.subtitle }}</h3>
 {% endblock %}
 
@@ -18,7 +18,7 @@
     <li class="current"><a href="#">{{ gallery.title }}</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
             <li><a href="{% url "zds.gallery.views.new_image" gallery.pk %}">Ajouter une image</a></li>
 {% endblock %}
 
