--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -1,46 +1,50 @@
 {% extends "member/base.html" %}
 {% load crispy_forms_tags %}
 
+
+
 {% block title %}
     Connexion
 {% endblock %}
+
+
+
+{# No sidebar on this page #}
+{% block body_class %}no-sidebar{% endblock %}
+{% block sidebar %}{% endblock %}
+
+
 
 {% block headline %}
     Se connecter
 {% endblock %}
 
+
+
 {% block breadcrumb %}
-    <li class="current"><a href="#">Connexion</a></li>
+    <li class="current">Connexion</li>
 {% endblock %}
 
+
+
 {% block content %}
-
-<div class="row">
-    <div class="large-12 columns">
-        {% if not user.is_authenticated %}
-            {% if error %}
+    {% if not user.is_authenticated %}
+        {% if error %}
             <div class="alert-box warning">
-                {{ error }}.
+                {{ error }}
             </div>
-            {% endif %}
-
-            <p>
-                Si vous n'avez pas de compte, vous pouvez <a href="{% url "zds.member.views.register_view" %}" >vous inscrire</a>.
-            </p>
-        {% else %}
-            <p>
-                Vous êtes déjà connecté.
-            </p>
         {% endif %}
-    </div>
-</div>
 
-{% if not user.is_authenticated %}
-<div class="row">
-    <div class="large-7 large-offset-1 columns">
+        <p>
+            Si vous n'avez pas de compte, vous pouvez <a href="{% url "zds.member.views.register_view" %}" >vous inscrire</a>.
+        </p>
+    {% else %}
+        <p>
+            Vous êtes déjà connecté.
+        </p>
+    {% endif %}
+
+    {% if not user.is_authenticated %}
         {% crispy form %}
-    </div>
-</div>
-{% endif %}
-
+    {% endif %}
 {% endblock %}
