--- a/templates/mp/answer.html
+++ b/templates/mp/answer.html
@@ -9,7 +9,7 @@
     <h2>Répondre au MP : {{topic.title}}</h2>
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     <h3 class="subtitle">{{ topic.subtitle }}</h3>
 {% endblock %}
 
