--- a/templates/mp/details.html
+++ b/templates/mp/details.html
@@ -9,7 +9,7 @@
     {{ forum.title }}
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     {{ forum.subtitle }}
 {% endblock %}
 
@@ -18,7 +18,7 @@
     <li class="current"><a href="javascript:;">{{ forum.title }}</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
     {% if user.is_authenticated %}
         <a href="/forums/sujet/nouveau?forum={{ forum.pk }}" class="button">
             <i class="icon-plus"></i>
