--- a/templates/mp/edit_post.html
+++ b/templates/mp/edit_post.html
@@ -9,7 +9,7 @@
     <h2>Éditer un message : {{topic.title}}</h2>
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     <h3 class="subtitle">{{ topic.subtitle }}</h3>
 {% endblock %}
 
@@ -18,7 +18,7 @@
     <li class="current"><a href="#">Éditer un message</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
         <h3>Actions<span class="wide"> sur ce MP</span></h3>
         <ul>
