--- a/templates/mp/topic.html
+++ b/templates/mp/topic.html
@@ -12,7 +12,7 @@
     <h2>{{ topic.title }}</h2>
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     <h3 class="subtitle">{{ topic.subtitle }}</h3>
 {% endblock %}
 
@@ -20,7 +20,7 @@
     <li class="current"><a href="#">{{ topic.title }}</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
         <h3>Actions<span class="wide"> sur ce MP</span></h3>
         <ul>
