--- a/templates/tutorial/edit_note.html
+++ b/templates/tutorial/edit_note.html
@@ -9,7 +9,7 @@
     <h2>Editer le commentaire du Tutoriel : {{tutorial.title}}</h2>
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     <h3 class="subtitle">{{ tutorial.description }}</h3>
 {% endblock %}
 
