--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -33,7 +33,7 @@
     </div>
 {% endblock %}
 
-{% block headline-sub %}
+{% block headline_sub %}
     {{ tutorial.description }}
 {% endblock %}
 
@@ -41,7 +41,7 @@
     <li class="current"><a href="#">{{ tutorial.title }}</a></li>
 {% endblock %}
 
-{% block headline-actions %}
+{% block sidebar_actions %}
 
     {% if perms.tutorial.change_tutorial%}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administrations">
