fix on naturaltime

--- a/templates/mp/topic.html
+++ b/templates/mp/topic.html
@@ -3,6 +3,7 @@
 {% load profile %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
+{% load humanize %}
 
 {% block title %}
     {{ topic.title }}
