Templates refacto : mainly member part

--- a/templates/forum/details.html
+++ b/templates/forum/details.html
@@ -43,5 +43,5 @@
         {% endfor %}
     </div>
 
-    {% include "forum/topic_pagination.part.html" with position="bottom" %}
+    {% include "misc/pagination.part.html" with position="bottom" %}
 {% endblock %}
