--- a/templates/forum/followed_topics.html
+++ b/templates/forum/followed_topics.html
@@ -17,6 +17,6 @@
         {% include "forum/details_row.part.html" %}
     {% endfor %}
     
-    {% include "forum/topic_pagination.part.html" with position="bottom" %}
+    {% include "misc/pagination.part.html" with position="bottom" %}
 
 {% endblock %}
