--- a/templates/member/new_password/failed.html
+++ b/templates/member/new_password/failed.html
@@ -1,28 +1,30 @@
 {% extends "member/base.html" %}
 
+
+
 {% block title %}
     Nouveau mot de passe raté
 {% endblock %}
+
+
 
 {% block headline %}
     Nouveau mot de passe raté
 {% endblock %}
 
+
+
 {% block breadcrumb %}
-    <li class="current"><a href="#">Nouveau mot de passe</a></li>
+    <li class="current">Nouveau mot de passe</li>
 {% endblock %}
 
+
+
 {% block content %}
-
-<div class="row">
-    <div class="large-12 columns">
-        <p>
-            Votre mot de passe n'a pas pu être modifié. A partir du moment où vous soumettez votre requête pour réinitialiser votre mot de passe, vous n'avez qu'une heure pour la confirmer.
-        </p>
-        <p>
-        	<a href="{% url "zds.member.views.forgot_password" %}">Re-soumettre votre demande de réinitialisation</a>.
-        </p>
-    </div>
-</div>
-
+    <p>
+        Votre mot de passe n'a pas pu être modifié. A partir du moment où vous soumettez votre requête pour réinitialiser votre mot de passe, vous n'avez qu'une heure pour la confirmer.
+    </p>
+    <p>
+        <a href="{% url "zds.member.views.forgot_password" %}">Re-soumettre votre demande de réinitialisation</a>.
+    </p>
 {% endblock %}
