--- a/templates/member/settings/base.html
+++ b/templates/member/settings/base.html
@@ -2,14 +2,14 @@
 
 
 
-{% block title %}
+{% block title_base %}
    Paramètres
 {% endblock %}
 
 
 
 {% block headline %}
-	Paramètres
+    Paramètres
 {% endblock %}
 
 
