--- a/templates/member/settings/user.html
+++ b/templates/member/settings/user.html
@@ -3,9 +3,21 @@
 
 
 
+{% block title %}
+   Pseudo/Email
+{% endblock %}
+
+
+
 {% block breadcrumb %}
     <li><a href="{% url "zds.member.views.settings_profile" %}">Paramètres</a></li>
     <li class="current">Pseudo/Email</li>
+{% endblock %}
+
+
+
+{% block headline %}
+    Pseudo/Email
 {% endblock %}
 
 
