--- a/templates/tutorial/edit_tutorial.html
+++ b/templates/tutorial/edit_tutorial.html
@@ -57,7 +57,7 @@
                 <tbody>
                     {% for member in tutorial.authors.all %}
                         <tr>
-                            <td>{% include "member/member_item_common.part.html" %}</td>
+                            <td>{% include "misc/member_item.part.html" %}</td>
                             <td>
                                 {% if tutorial.authors.count > 1 %}
                                 <button type="submit" name="author" value="{{ member.pk }}">
