--- a/templates/tutorial/export.html
+++ b/templates/tutorial/export.html
@@ -24,7 +24,7 @@
                         ,
                     {% endif %}
                 {% endif %}
-                {% include "member/member_item_common.part.html" %}
+                {% include "misc/member_item.part.html" %}
             {% endfor %}.
         </p>
         </div>
