--- a/templates/tutorial/view_chapter.html
+++ b/templates/tutorial/view_chapter.html
@@ -38,7 +38,7 @@
         <ul>
             {% for member in tutorial.authors.all %}
                 <li>
-                    {% include "member/member_item_common.part.html" %}
+                    {% include "misc/member_item.part.html" %}
                 </li>
             {% endfor %}
         </ul>
