--- a/templates/forum/details_row.part.html
+++ b/templates/forum/details_row.part.html
@@ -30,7 +30,7 @@
     <div class="forum-entry-desc">
         <p>
             {% with member=topic.author %}
-                Par {% include "member/member_item_common.part.html" %}
+                Par {% include "misc/member_item.part.html" %}
             {% endwith %}
             <br />
             {% with answer=topic.get_last_answer %}
@@ -43,7 +43,7 @@
                     </a>
                     par
                     {% with member=answer.author %}
-                        {% include "member/member_item_common.part.html" %}
+                        {% include "misc/member_item.part.html" %}
                     {% endwith %}
                 {% else %}
                     Aucune réponse
