--- a/templates/member/forgot_password/success.html
+++ b/templates/member/forgot_password/success.html
@@ -1,25 +1,27 @@
 {% extends "member/base.html" %}
 
+
+
 {% block title %}
     Mot de passe oublié
 {% endblock %}
+
+
 
 {% block headline %}
     Mot de passe oublié
 {% endblock %}
 
+
+
 {% block breadcrumb %}
-    <li class="current"><a href="#">Mot de passe oublié</a></li>
+    <li class="current">Mot de passe oublié</li>
 {% endblock %}
 
+
+
 {% block content %}
-
-<div class="row">
-    <div class="large-12 columns">
-        <p>
-        	Un courriel contenant de plus amples instructions d'activation a été envoyé. Le mail peut se trouver avec les spams.
-        </p>
-    </div>
-</div>
-
+    <p>
+        Un courriel contenant de plus amples instructions d'activation a été envoyé. Le mail peut se trouver avec les spams.
+    </p>
 {% endblock %}
