--- a/templates/member/settings/profile.html
+++ b/templates/member/settings/profile.html
@@ -3,9 +3,21 @@
 
 
 
+{% block title %}
+   Mon profil
+{% endblock %}
+
+
+
 {% block breadcrumb %}
     <li><a href="{% url "zds.member.views.settings_profile" %}">Paramètres</a></li>
     <li class="current">Mon Profil</li>
+{% endblock %}
+
+
+
+{% block headline %}
+    Mon profil
 {% endblock %}
 
 
