--- a/templates/tutorial/history_tutorial.html
+++ b/templates/tutorial/history_tutorial.html
@@ -44,7 +44,7 @@
                         ,
                     {% endif %}
                 {% endif %}
-                {% include "member/member_item_common.part.html" %}
+                {% include "misc/member_item.part.html" %}
             {% endfor %}.
         </p>
     </div>
