--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -26,7 +26,7 @@
         <ul>
         {% for member in tutorial.authors.all %}
             <li>
-                {% include "member/member_item_common.part.html" %}
+                {% include "misc/member_item.part.html" %}
             </li>
         {% endfor %}.
         </ul>
@@ -57,12 +57,12 @@
     {% include "tutorial/toc_common_online.html" %}
     
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Télécharger">
-    	<h3><span class="wide">Télécharger</span></h3>
+        <h3><span class="wide">Télécharger</span></h3>
         <ul class="sidebar-standalone mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Téléchargements">
-        	{% if perms.tutorial.change_tutorial %}
-        	<li><a href="{% url "zds.tutorial.views.download" %}?tutoriel={{ tutorial.pk }}">Archive</a></li>
-        	<li><a href="{% url "zds.tutorial.views.download_markdown" %}?tutoriel={{ tutorial.pk }}">Markdown</a></li>
-        	{% endif %}
+            {% if perms.tutorial.change_tutorial %}
+            <li><a href="{% url "zds.tutorial.views.download" %}?tutoriel={{ tutorial.pk }}">Archive</a></li>
+            <li><a href="{% url "zds.tutorial.views.download_markdown" %}?tutoriel={{ tutorial.pk }}">Markdown</a></li>
+            {% endif %}
             <li><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></li>
             <li><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></li>
         </ul>
@@ -113,7 +113,7 @@
  
 <h1>Commentaires</h1>
     {% with topic=tutorial %}
-    {% include "forum/topic_pagination.part.html" with position="top" %}
+    {% include "misc/pagination.part.html" with position="top" %}
     {% endwith %}
 {% for note in notes %}
 <article class="forum-message">
@@ -167,7 +167,7 @@
 {% endfor %}
 
 {% with topic=tutorial %}
-{% include "forum/topic_pagination.part.html" with position="bottom" %}
+{% include "misc/pagination.part.html" with position="bottom" %}
 {% endwith %}
 
 {% if user.is_authenticated %}
