--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <li class="logo">
           <a href="/"><img src='{% static "img/logo.png" %}' alt="ZesteDeSavoir" /></a>
         </li>
-        <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
+        <li class="toggle-topbar menu-icon"><a href="#"></a></li>
       </ul>
 
       <section class="top-bar-section">
